--- a/pages/pages__emuladores/gameboyadvance.html
+++ b/pages/pages__emuladores/gameboyadvance.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game Boy Advance - PokéROOM's</title>
-    <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="../../styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="icon" href="../images/Pokebola3d favicon PokéROOM's.png" type="image/x=icon">
+    <link rel="icon" href="../../images/images__main/Pokebola3d favicon PokéROOM's.png" type="image/x=icon">
 </head>
 
 <body>
@@ -65,9 +65,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
         crossorigin="anonymous"></script>
-    <script src="../js/navbar.js"></script>
-    <script src="../js/carossel.js"></script>
-    <script src="../js/footer.js"></script>
+    <script src="../../js/navbar.js"></script>
+    <script src="../../js/carossel.js"></script>
+    <script src="../../js/footer.js"></script>
 
 </body>
 
