--- a/pages/pages__rooms/pk__yellow.html
+++ b/pages/pages__rooms/pk__yellow.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokémon Yellow - PokéROOM's</title>
-    <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="../../styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="icon" href="../images/Pokebola3d favicon PokéROOM's.png" type="image/x=icon">
+    <link rel="icon" href="../../images/images__main/Pokebola3d favicon PokéROOM's.png" type="image/x=icon">
 </head>
 
 <body>
@@ -23,7 +23,7 @@
 
         <div class="container__jogo">
 
-            <img src="../images__download__rooms/pk__yellow.png" alt="Pokémon Red" class="container__jogo__img">
+            <img src="../../images/images__download__rooms/pk__yellow.png" alt="Pokémon Red" class="container__jogo__img">
 
             <!-- <h1 class="container__jogo__titulo">Game Boy</h1> -->
 
@@ -73,10 +73,10 @@
         <h2 class="titulo__jogos__compativeis">Jogos da Mesma Geração</h2>
 
         <div class="jogos__compativeis">
-            <a href="./pk__red.html"><img src="../images__rooms/pk__red.png" alt="Pokémon Red" class="img__jogos__compativeis"></a>
-            <a href="./pk__blue.html"><img src="../images__rooms/pk__blue.png" alt="Pokémon Blue" class="img__jogos__compativeis"></a>
-            <a href="./pk__green.html"><img src="../images__rooms/pk__green.png" alt="Pokémon Green" class="img__jogos__compativeis"></a>
-            <a href="./pk__yellow.html"><img src="../images__rooms/pk__yellow.png" alt="Pokémon Yellow" class="img__jogos__compativeis"></a>
+            <a href="../../pages/pages__rooms/pk__red.html"><img src="../../images/images__rooms/pk__red.png" alt=""></a>
+            <a href="../../pages/pages__rooms/pk__blue.html"><img src="../../images/images__rooms/pk__blue.png" alt=""></a>
+            <a href="../../pages/pages__rooms/pk__green.html"><img src="../../images/images__rooms/pk__green.png" alt=""></a>
+            <a href="../../pages/pages__rooms/pk__yellow.html"><img src="../../images/images__rooms/pk__yellow.png" alt=""></a>
         </div>
 
     </section>
@@ -86,9 +86,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
         crossorigin="anonymous"></script>
-    <script src="../js/navbar.js"></script>
-    <script src="../js/carossel.js"></script>
-    <script src="../js/footer.js"></script>
+    <script src="../../js/navbar.js"></script>
+    <script src="../../js/carossel.js"></script>
+    <script src="../../js/footer.js"></script>
 
 </body>
 
