--- a/pages/pages__rooms/pk__omegaruby.html
+++ b/pages/pages__rooms/pk__omegaruby.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nintendo 3DS - PokéROOM's</title>
+    <title>Pokémon Omega Ruby - PokéROOM's</title>
     <link rel="stylesheet" href="../../styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="icon" href="../../images/images__main/Pokebola3d favicon PokéROOM's.png" type="image/x=icon">
@@ -23,25 +23,61 @@
 
         <div class="container__jogo">
 
-            <img src="../../images/images__download__emuladores/ N3DS.png" alt="Game Boy" class="container__jogo__img">
+            <img src="../../images/images__download__rooms/pk__omegaruby.png" alt="Pokémon Omega Ruby"
+                class="container__jogo__img">
 
             <!-- <h1 class="container__jogo__titulo">Game Boy</h1> -->
 
         </div>
 
         <div class="container__info__jogo">
-            <p class="info__jogo">Nintendo 3DS
-                O Nintendo 3DS elevou o mundo dos portáteis com gráficos em 3D sem óculos, retrocompatibilidade e uma
-                biblioteca incrível de jogos. Nele, você pode explorar títulos como Pokémon X, Y, Omega Ruby, Alpha
-                Sapphire, Sun e Moon com visuais mais ricos e jogabilidade envolvente. Um console que marcou gerações
-                com sua inovação e experiências imersivas — agora acessível via emuladores compatíveis com PC e mobile!
+            <p class="info__jogo">
+                Lançamento: 2014 (Nintendo 3DS) | Tipo: Remake de Pokémon Ruby (2002)
+
+                A Região de Hoenn em 3D
+                Pokémon Omega Ruby reconta a aventura clássica da terceira geração com tecnologia da 6ª geração,
+                apresentando:
+
+                Gráficos totalmente 3D e câmera dinâmica
+
+                Músicas remasterizadas com orquestração
+
+                Fidelidade à história original com adições modernas
+
+                Nova Narrativa e Features
+                1. Mega Evoluções e Primal Reversion
+
+                28 Mega Evoluções disponíveis (incluindo Mega Rayquaza)
+
+                Primal Groudon (exclusivo desta versão) com habilidade Desolate Land
+
+                2. Equipe Magma Expandida
+
+                Líder Maxie com motivações mais desenvolvidas
+
+                Novo cientista: Dr. Cozmo, ligado aos eventos cósmicos
+
+                3. Delta Episode (Pós-Jogo)
+
+                História adicional envolvendo:
+
+                Asteróide em rota de colisão com Hoenn
+
+                Deoxys como Pokémon central
+
+                Participação especial de Steven Stone
             </p>
 
-            <a href="https://citra-emulator.com/download/windows/">
-                <p class="dowload__link__jogo">Citra (descktop)<i class="ri-download-line"></i></p>
+            <a href="#">
+                <p class="dowload__link__jogo">Pokémon Omega Ruby - Tradução<i class="ri-download-line"></i></p>
             </a>
-            <a href="https://citra-emulator.com/download/android/">
-                <p class="dowload__link__jogo">Citra (mobiel) <i class="ri-download-line"></i></p>
+
+            <a href="#">
+                <p class="dowload__link__jogo">Pokémon Omega Ruby - USA<i class="ri-download-line"></i></p>
+            </a>
+
+            <a href="../pages__emuladores/nintendods.html">
+                <p class="dowload__link__jogo">Nintendo 3DS</p>
             </a>
 
         </div>
@@ -50,7 +86,7 @@
 
     <section class="container__jogos__compativeis">
 
-        <h2 class="titulo__jogos__compativeis">Jogos Compatíveis</h2>
+        <h2 class="titulo__jogos__compativeis">Jogos da Mesma Geração</h2>
 
         <div class="jogos__compativeis">
             <a href="../../pages/pages__rooms/pk__x.html"><img src="../../images/images__rooms/pk__x.png" alt=""></a>
