--- a/pages/pages__rooms/pk__sun.html
+++ b/pages/pages__rooms/pk__sun.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nintendo 3DS - PokéROOM's</title>
+    <title>Pokémon Sun - PokéROOM's</title>
     <link rel="stylesheet" href="../../styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="icon" href="../../images/images__main/Pokebola3d favicon PokéROOM's.png" type="image/x=icon">
@@ -23,25 +23,57 @@
 
         <div class="container__jogo">
 
-            <img src="../../images/images__download__emuladores/ N3DS.png" alt="Game Boy" class="container__jogo__img">
+            <img src="../../images/images__download__rooms/pk__sun.png" alt="Pokémon Alpha Sapphire"
+                class="container__jogo__img">
 
             <!-- <h1 class="container__jogo__titulo">Game Boy</h1> -->
 
         </div>
 
         <div class="container__info__jogo">
-            <p class="info__jogo">Nintendo 3DS
-                O Nintendo 3DS elevou o mundo dos portáteis com gráficos em 3D sem óculos, retrocompatibilidade e uma
-                biblioteca incrível de jogos. Nele, você pode explorar títulos como Pokémon X, Y, Omega Ruby, Alpha
-                Sapphire, Sun e Moon com visuais mais ricos e jogabilidade envolvente. Um console que marcou gerações
-                com sua inovação e experiências imersivas — agora acessível via emuladores compatíveis com PC e mobile!
+            <p class="info__jogo">
+                Lançamento: 2016 (Nintendo 3DS) | Geração: 7ª | Região: Alola
+
+                Inovação Tropical em Alola
+                Pokémon Sun introduziu uma das mudanças mais radicais na fórmula tradicional da série, transportando os
+                jogadores para o arquipélago de Alola (inspirado no Havaí). Principais características:
+
+                Cronologia invertida: Horário oposto ao do sistema (dia no jogo = noite real)
+
+                Primeira remoção de Ginásios Pokémon: Substituídos por Provas de Ilha e Kahunas
+
+                Grátficos significativamente aprimorados: Cutscenes cinematográficas e expressões faciais detalhadas
+
+                Trama e Features Exclusivas
+                1. História Principal
+
+                Enredo focado na Lenda de Alola e nos Ultra Beasts
+
+                Vilões da Equipe Skull (gangue desorganizada) e Aether Foundation (organização misteriosa)
+
+                Pokémon lendário Solgaleo (capa da versão Sun) como peça central
+
+                2. Novos Mecanismos de Jogo
+
+                Z-Moves: Ataques únicos ativados por Z-Crystals
+
+                Pokémon Regionais de Alola: Formas alternativas de Pokémon clássicos (Ex: Vulpix de Gelo)
+
+                Ride Pokémon: Substitui HMs, permitindo navegação sem gastar espaços de movimento
+
+                Festival Plaza: Hub online para interações multiplayer
             </p>
 
-            <a href="https://citra-emulator.com/download/windows/">
-                <p class="dowload__link__jogo">Citra (descktop)<i class="ri-download-line"></i></p>
+            <a href="#">
+                <p class="dowload__link__jogo">Pokémon Sun - Tradução<i class="ri-download-line"></i></p>
             </a>
-            <a href="https://citra-emulator.com/download/android/">
-                <p class="dowload__link__jogo">Citra (mobiel) <i class="ri-download-line"></i></p>
+
+            <a href="#">
+                <p class="dowload__link__jogo">Pokémon Sun - USA<i class="ri-download-line"></i></p>
+            </a>
+
+            <a href="../pages__emuladores/nintendods.html">
+                <p class="dowload__link__jogo">Nintendo 3DS</p>
             </a>
 
         </div>
@@ -50,7 +82,7 @@
 
     <section class="container__jogos__compativeis">
 
-        <h2 class="titulo__jogos__compativeis">Jogos Compatíveis</h2>
+        <h2 class="titulo__jogos__compativeis">Jogos da Mesma Geração</h2>
 
         <div class="jogos__compativeis">
             <a href="../../pages/pages__rooms/pk__x.html"><img src="../../images/images__rooms/pk__x.png" alt=""></a>
