--- a/pages/pages_navegation/ROOM's.html
+++ b/pages/pages_navegation/ROOM's.html
@@ -82,12 +82,12 @@
             <a href="../../pages/pages__rooms/pk__white.html"><img src="../../images/images__rooms/pk__white.png" alt=""></a>
             <a href="../../pages/pages__rooms/pk__black2.html"><img src="../../images/images__rooms/pk__black2.png" alt=""></a>
             <a href="../../pages/pages__rooms/pk__white2.html"><img src="../../images/images__rooms/pk__white2.png" alt=""></a>
-            <a href="#"><img src="../../images/images__rooms/pk__x.png" alt=""></a>
-            <a href="#"><img src="../../images/images__rooms/pk__y.png" alt=""></a>
-            <a href="#"><img src="../../images/images__rooms/pk__omegaruby.png" alt=""></a>
-            <a href="#"><img src="../../images/images__rooms/pk__alphasapphira.png" alt=""></a>
-            <a href="#"><img src="../../images/images__rooms/pk__sun.png" alt=""></a>
-            <a href="#"><img src="../../images/images__rooms/pk__moon.png" alt=""></a>
+            <a href="../../pages/pages__rooms/pk__x.html"><img src="../../images/images__rooms/pk__x.png" alt=""></a>
+            <a href="../../pages/pages__rooms/pk__y.html"><img src="../../images/images__rooms/pk__y.png" alt=""></a>
+            <a href="../../pages/pages__rooms/pk__omegaruby.html"><img src="../../images/images__rooms/pk__omegaruby.png" alt=""></a>
+            <a href="../../pages/pages__rooms/pk__alphasapphire.html"><img src="../../images/images__rooms/pk__alphasapphira.png" alt=""></a>
+            <a href="../../pages/pages__rooms/pk__sun.html"><img src="../../images/images__rooms/pk__sun.png" alt=""></a>
+            <a href="../../pages/pages__rooms/pk__moon.html"><img src="../../images/images__rooms/pk__moon.png" alt=""></a>
 
         </div>
 
